--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,15 +7,16 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.Insorma">
+        android:supportsRtl="true">
         <activity
-            android:name=".MainActivity"
-            android:exported="false">
+            android:name=".main.MainActivity"
+            android:exported="false"
+            android:theme="@style/CustomTheme">
         </activity>
         <activity
             android:name=".sign.SignActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.Insorma">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
