Add safeargs dependency

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,14 @@
 buildscript {
     ext.nav_version = "2.4.1"
     ext.lifecycle_version = "2.5.0-alpha04"
+    dependencies {
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+    }
 }
 plugins {
     id 'com.android.application'
 }
+apply plugin : "androidx.navigation.safeargs"
 
 android {
     compileSdk 32
