--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,8 +39,6 @@ android {
 }
 
 dependencies {
-    // View Model
-//    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
     // Fragment + navigation
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
@@ -52,6 +50,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    // View Model + Live data
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
     testImplementation 'junit:junit:4.13.2'
